--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-client",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,7 +14,7 @@
     "framer-motion": "^12.23.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0",
+    "react-icons": "^5.2.1",
     "react-scroll": "^1.9.0",
     "web-vitals": "^3.3.1"
   },
