--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,22 @@
 {
   "name": "portfolio-server",
   "version": "1.0.0",
-  "description": "Portfolio backend API",
-  "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build": "npm install"
+    "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
     "compression": "^1.7.4",
-    "dotenv": "^16.3.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.2.1",
+    "helmet": "^7.1.0",
+    "mongoose": "^8.18.2",
+    "nodemailer": "^6.10.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "nodemon": "^3.0.2"
   }
 }
