--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,12 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-scroll": "^1.9.0",
-    "web-vitals": "^3.3.1",
-    "prop-types": "^15.8.1"
+    "web-vitals": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -31,6 +31,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
+    "terser": "^5.44.0",
     "vite": "^5.0.8"
   }
 }
